Refactor ScreenFeatures and Layout components for improved structure and styling. Removed scroll snap container styles and adjusted layout for better responsiveness.

--- a/src/components/ScreenFeatures.astro
+++ b/src/components/ScreenFeatures.astro
@@ -6,11 +6,17 @@ import sui from "@/assets/sui-logo-white.png";
 import wallet1 from "@/assets/wallet1.jpg";
 ---
 
-<div class="min-h-screen bg-gradient-to-b from-[#005b4a] via-[#03503c] to-[#033b32] relative overflow-hidden">
-  <div class="container max-w-7xl mx-auto py-20 px-4 flex flex-col md:flex-row items-center min-h-screen overflow-hidden">
+<div
+  class="min-h-screen bg-gradient-to-b from-[#005b4a] via-[#03503c] to-[#033b32] relative overflow-hidden"
+>
+  <div
+    class="container max-w-7xl mx-auto py-20 px-4 flex flex-col md:flex-row items-center min-h-screen overflow-hidden"
+  >
     <div class="w-full md:w-1/2 flex flex-col justify-center">
       <div class="scroll-animate-left mb-15 md:mb-90">
-        <h2 class="text-3xl md:text-5xl text-center md:text-left text-white whitespace-nowrap">
+        <h2
+          class="text-3xl md:text-5xl text-center md:text-left text-white whitespace-nowrap"
+        >
           Trade smarter, not harder.
         </h2>
         <p class="mt-2 text-sm md:text-lg text-center md:text-left text-white">
@@ -18,19 +24,28 @@ import wallet1 from "@/assets/wallet1.jpg";
           Just clean UX, and all your assets in one view.
         </p>
       </div>
-      
+
       <div class="scroll-animate-left delay-200 lg:mt-25 mt-0 md:mb-15">
-        <p class="text-base md:text-lg text-center md:text-left text-white">Build on</p>
-        <div class="flex gap-4 md:gap-6 h-6 md:h-8 items-end mt-4 justify-center md:justify-start">
+        <p class="text-base md:text-lg text-center md:text-left text-white">
+          Build on
+        </p>
+        <div
+          class="flex gap-4 md:gap-6 h-6 md:h-8 items-end mt-4 justify-center md:justify-start"
+        >
           <img src={hyperliquid.src} alt="Hyperliquid" class="h-full" />
-          <img src={sui.src} alt="Sui" class="h-full" />
         </div>
       </div>
     </div>
 
-    <div class="w-full md:w-1/2 flex justify-center md:justify-end items-center mt-10">
+    <div
+      class="w-full md:w-1/2 flex justify-center md:justify-end items-center mt-10"
+    >
       <div class="scroll-animate-right delay-100">
-        <img src={wallet1.src} alt="wallet" class="w-full md:w-[75%] lg:w-[90%] xl:w-full object-contain" />
+        <img
+          src={wallet1.src}
+          alt="wallet"
+          class="w-full md:w-[75%] lg:w-[90%] xl:w-full object-contain"
+        />
       </div>
     </div>
   </div>
