--- a/src/components/MeowFeatures.astro
+++ b/src/components/MeowFeatures.astro
@@ -1,14 +1,20 @@
 ---
 import HoverCard from "./HoverCard";
 import purroIcon from "@/assets/purro-icon.png";
-import Body from "@/assets/Body.png"
+import Body from "@/assets/Body.png";
 ---
 
-<div class="min-h-screen bg-gradient-to-b from-[#021919] via-[#163737] to-[#005b4a] relative overflow-hidden">
-  <div class="container max-w-7xl mx-auto py-20 px-4 flex flex-col md:flex-row items-center min-h-screen overflow-hidden">
-    <div class="w-full md:w-1/2 ">
+<div
+  class="min-h-screen bg-gradient-to-b from-[#021919] via-[#163737] to-[#005b4a] relative overflow-hidden"
+>
+  <div
+    class="container max-w-7xl mx-auto py-20 px-4 flex flex-col md:flex-row items-center min-h-screen overflow-hidden"
+  >
+    <div class="w-full md:w-1/2">
       <div class="scroll-animate">
-        <h2 class="text-3xl md:text-5xl text-center md:text-left text-white whitespace-nowrap">
+        <h2
+          class="text-3xl md:text-5xl text-center md:text-left text-white whitespace-nowrap"
+        >
           The purr-fect crypto companion <br /> for smart traders
         </h2>
         <p class="mt-2 text-sm md:text-lg text-center md:text-left text-white">
@@ -18,29 +24,43 @@ import Body from "@/assets/Body.png"
 
       <div class="scroll-animate delay-200 mt-22">
         <div class="flex gap-10 justify-start mt-10 md:mt-0">
-          <HoverCard content="One wallet for Hyperliquid & HyperEVM" client:load />
-          <HoverCard content="Get 40% of your swap fees back in Purro tokens" client:load />
+          <HoverCard
+            content="One wallet for Hyperliquid & HyperEVM"
+            client:load
+          />
+          <HoverCard
+            content="Get 40% of your swap fees back in Purro tokens"
+            client:load
+          />
         </div>
         <div class="flex gap-10 justify-start mt-10">
           <HoverCard content="Swap, stake, bridge in one place" client:load />
-          <HoverCard content="Send with Hyperliquid @names not addresses" client:load />
+          <HoverCard
+            content="Send with Hyperliquid @names not addresses"
+            client:load
+          />
         </div>
         <div class="flex gap-10 justify-start mt-10">
-          <HoverCard content="Dev-ready SDKs for Hyperliquid apps" client:load />
+          <HoverCard
+            content="Dev-ready SDKs for Hyperliquid apps"
+            client:load
+          />
           <HoverCard content="Support Multi-chain" client:load />
         </div>
       </div>
     </div>
 
     <div class="w-full md:w-1/2 flex justify-center items-end mt-30 md:mt-15">
-      <div class="relative w-full max-w-[14rem] md:max-w-[14rem] lg:max-w-[22rem] xl:max-w-[28rem]">
-        <img 
+      <div
+        class="relative w-full max-w-[14rem] md:max-w-[14rem] lg:max-w-[22rem] xl:max-w-[28rem]"
+      >
+        <img
           id="purro-body"
-          src={Body.src} 
-          alt="Purro Body" 
+          src={Body.src}
+          alt="Purro Body"
           class="w-full h-auto max-w-full
-          [transform:scaleX(-1)] 
-          animate-bounce-slow" 
+          [transform:scaleX(-1)]
+          animate-bounce-slow"
         />
       </div>
     </div>
