--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,6 +1,4 @@
 ---
-import background from "../assets/bg1.png";
-import icon from "../assets/purro-icon.png";
 import chrome from "../assets/chrome.png";
 import Button from "./Button";
 import Header from "./Header.astro";
@@ -24,13 +22,15 @@ import AuroraBg from "./AuroraBg";
   <div class="container mx-auto relative">
     <div class="flex flex-col items-center justify-center h-screen">
       <div class="scroll-animate text-center">
-        <h1
-          class="font-livvic font-bold text-[#02f1dc] leading-none md:text-[200px] sm:text-[100px] text-[100px]"
+        <img
+          src="/Purro_Logotype_White.png"
+          alt="logo"
+          class="w-4/5 max-w-xl md:w-full md:max-w-2xl mx-auto"
+        />
+        <p
+          class="font-figtree font-medium text-white text-xl sm:text-3xl md:text-5xl leading-tight md:leading-tight"
         >
-          Purro
-        </h1>
-        <p class="font-figtree font-medium text-white text-2xl md:text-5xl">
-          Built to chill - Ready to win
+          Built to chill&nbsp;&mdash;&nbsp;Ready to win
         </p>
       </div>
 
@@ -49,12 +49,12 @@ import AuroraBg from "./AuroraBg";
           </Button>
         </div>
 
-        <p
+        <!-- <p
           class="max-w-2xl text-center text-sm md:text-md font-light mt-5 text-[#b1cac4]"
         >
           Built for real onchain grinders: smooth UX, unified assets. <br />
           40% fees come back to you.
-        </p>
+        </p> -->
       </div>
     </div>
   </div>
