--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import ScreenFeatures from "../components/ScreenFeatures.astro";
 import Layout from "../layouts/Layout.astro";
 import NFTSection from "../components/NFTSections.astro";
 import Footer from "../components/Footer.astro";
+import Team from "../components/Team.astro";
 ---
 
 <Layout>
@@ -19,6 +20,9 @@ import Footer from "../components/Footer.astro";
   </section>
   <section class="scroll-snap-section">
     <NFTSection />
+  </section>
+  <section class="scroll-snap-section">
+    <Team />
   </section>
   <section class="footer-section">
     <Footer />
