Update Carousel component to enable pause on hover, adjust Hero component positioning, modify scroll speed in index page, and add Footer to privacy and terms pages for improved layout and user experience.

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,4 @@
 ---
-import logo from "../assets/purro-logo.png";
 import xIcon from "../assets/xIcon.svg";
 import discordIcon from "../assets/discordIcon.svg";
 import telegramIcon from "../assets/teleIcon.svg";
@@ -27,7 +26,9 @@ const socials = [
   <div
     class="p-3 flex justify-between items-center bg-[#b1cac4]/30 rounded-full"
   >
-    <img src="Purro_Icon_Dark.png" alt="logo" class="h-10 rounded-full" />
+    <a href="/">
+      <img src="Purro_Icon_Dark.png" alt="logo" class="h-10 rounded-full" />
+    </a>
     <div class="flex items-center gap-2">
       <div class="items-center flex">
         {
