--- a/src/components/ScreenFeatures.astro
+++ b/src/components/ScreenFeatures.astro
@@ -18,7 +18,7 @@ import screenshot6 from "@/assets/screenshots/6.png";
     <div class="w-full md:w-1/2 flex flex-col justify-center">
       <div class="scroll-animate-left mb-15 md:mb-90">
         <h2
-          class="text-3xl md:text-5xl text-center md:text-left text-white whitespace-nowrap font-semibold"
+          class="text-3xl md:text-5xl text-center md:text-left text-white font-semibold"
         >
           Trade smarter, not harder.
         </h2>
