--- a/src/components/MeowFeatures.astro
+++ b/src/components/MeowFeatures.astro
@@ -9,7 +9,7 @@ import Body from "@/assets/Body.png";
   <div
     class="container max-w-7xl mx-auto py-20 px-4 flex flex-col items-center justify-center min-h-screen"
   >
-    <div class="w-full flex flex-col items-center text-center max-w-xl">
+    <div class="w-full flex flex-col items-center text-center">
       <div class="scroll-animate">
         <h2 class="text-3xl md:text-5xl text-center text-white font-semibold">
           The purr-fect crypto companion <br /> for smart traders
