Update MeowFeatures, ScreenFeatures, and Team components to enhance layout consistency by adjusting padding for medium screens. Improve styling by removing unnecessary classes in the ScreenFeatures component.

--- a/src/components/ScreenFeatures.astro
+++ b/src/components/ScreenFeatures.astro
@@ -10,7 +10,7 @@ import screenshot6 from "@/assets/screenshots/6.png";
 ---
 
 <div
-  class="min-h-screen bg-gradient-to-b from-[#005b4a] via-[#03503c] to-[#033b32] relative overflow-hidden py-32"
+  class="min-h-screen bg-gradient-to-b from-[#005b4a] via-[#03503c] to-[#033b32] relative overflow-hidden md:py-32"
 >
   <div
     class="container max-w-7xl mx-auto py-20 px-4 flex flex-col md:flex-row items-center min-h-screen overflow-hidden"
@@ -43,7 +43,7 @@ import screenshot6 from "@/assets/screenshots/6.png";
     <div
       class="w-full md:w-1/2 flex justify-center md:justify-end items-center mt-10"
     >
-      <div class="scroll-animate-right delay-100 scale-">
+      <div class="scroll-animate-right delay-100">
         <Carousel
           images={[
             { src: screenshot1.src, alt: "Login" },
