--- a/src/components/MeowFeatures.astro
+++ b/src/components/MeowFeatures.astro
@@ -4,7 +4,7 @@ import Body from "@/assets/Body.png";
 ---
 
 <div
-  class="min-h-screen bg-gradient-to-b from-[#021919] via-[#163737] to-[#005b4a] relative py-32"
+  class="min-h-screen bg-gradient-to-b from-[#021919] via-[#163737] to-[#005b4a] relative md:py-32"
 >
   <div
     class="container max-w-7xl mx-auto py-20 px-4 flex flex-col items-center justify-center min-h-screen"
