--- a/src/components/Team.astro
+++ b/src/components/Team.astro
@@ -60,7 +60,7 @@ const teamItems = [
 ---
 
 <div
-  class="min-h-screen bg-gradient-to-b from-[#021919] via-[#0e2a2a] to-[#081919] relative py-32"
+  class="min-h-screen bg-gradient-to-b from-[#021919] via-[#0e2a2a] to-[#081919] relative md:py-32"
 >
   <div
     class="container max-w-7xl mx-auto py-20 px-4 flex flex-col items-center justify-center min-h-[70vh]"
