Update Header component to correct logo image path for proper asset loading.

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -27,7 +27,7 @@ const socials = [
     class="p-3 flex justify-between items-center bg-[#b1cac4]/30 rounded-full"
   >
     <a href="/">
-      <img src="Purro_Icon_Dark.png" alt="logo" class="h-10 rounded-full" />
+      <img src="./Purro_Icon_Dark.png" alt="logo" class="h-10 rounded-full" />
     </a>
     <div class="flex items-center gap-2">
       <div class="items-center flex">
