Update Header component to modify button text from "Install Purro" to "Install" for clarity.

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -57,7 +57,7 @@ const socials = [
       </div>
 
       <Button isToast={true} toastMessage="Coming soon" client:load>
-        Install Purro
+        Install
       </Button>
     </div>
   </div>
