Refactor button elements in Header and Hero components to use anchor tags for navigation to the install page, enhancing user experience and accessibility.

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -56,9 +56,9 @@ const socials = [
         }
       </div>
 
-      <Button isToast={true} toastMessage="Coming soon" client:load>
-        Install
-      </Button>
+      <a href="/install">
+        <Button client:load> Install </Button>
+      </a>
     </div>
   </div>
 </header>
