Update screenshots and enhance install page layout with new features and improved styling

--- a/src/components/ScreenFeatures.astro
+++ b/src/components/ScreenFeatures.astro
@@ -3,10 +3,11 @@ import hyperliquid from "@/assets/hyperliquid-logo-green.svg";
 import Carousel from "./Carousel";
 import screenshot1 from "@/assets/screenshots/1.png";
 import screenshot2 from "@/assets/screenshots/2.png";
-import screenshot3 from "@/assets/screenshots/3.png";
-import screenshot4 from "@/assets/screenshots/4.png";
-import screenshot5 from "@/assets/screenshots/5.png";
-import screenshot6 from "@/assets/screenshots/6.png";
+import screenshot3 from "@/assets/screenshots/4.png";
+import screenshot4 from "@/assets/screenshots/5.png";
+import screenshot5 from "@/assets/screenshots/6.png";
+import screenshot6 from "@/assets/screenshots/7.png";
+import screenshot7 from "@/assets/screenshots/8.png";
 ---
 
 <div
@@ -52,6 +53,7 @@ import screenshot6 from "@/assets/screenshots/6.png";
             { src: screenshot4.src, alt: "Another" },
             { src: screenshot5.src, alt: "Another" },
             { src: screenshot6.src, alt: "Another" },
+            { src: screenshot7.src, alt: "Another" },
           ]}
           baseWidth={375}
           height={550}
